--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Games Timeline" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.webmanifest" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="icon" href="%PUBLIC_URL%/icon.svg" type="image/svg+xml">
